--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 /* Due to error in MDL : https://github.com/google/material-design-lite/issues/5281
 */
 .mdl-ripple {
-  background: black ;
+  background: black;
   opacity: 0.001;
 }
 
@@ -22,7 +22,7 @@
 }
 
 .mdl-textfield__error {
-  color: rgba(3, 36, 107, 0.245);
+  color: rgba(3, 36, 107, 24.5%);
 }
 
 .page-content {
