--- a/css/style2.css
+++ b/css/style2.css
@@ -7,6 +7,31 @@
 */
 
 .mdl-ripple {
-  background-color: black;
+  background: black;
   opacity: 0.001;
+}
+
+.mdl-layout__header-row {
+  justify-content: content;
+  padding: 0;
+}
+
+.mdl-layout__content {
+  padding-left: 15pt;
+  padding-right: 15pt;
+  padding-top: 15pt;
+}
+
+.mdl-textfield__error {
+  color: darkblue;
+}
+
+.page-content {
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.25rem;
+}
+
+body {
+  background-color: darkgreen;
 }
